# Sumitup-website-chatbot

./: .gitignore  LICENSE  README.md  config.py  flow.py  instruction.md  main.py  nodes.py  pyproject.toml  reponse.md  server.py
.cursor/rules/: .cursorrules  cursor.mdc
helpers/: helpers.py
misc/: archived.py  responses.md
prompts/: answer_instructions.md  answer_prompt.md  archived.md  instruction.md
static/: chatbot.js
tracing/: config.py  core.py
utils/: call_llm.py  chroma_db.py  embedding.py  mongo_db.py  visualize.py  web_crawler.py  web_search.py
